# URL-Shortner

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  database.py  main.py  security.py
app/api/: dependencies.py
app/api/dependencies/: url.py
app/api/v1/: auth.py  router.py  url.py
app/api/v1/filters/: url_filter.py
app/models/: url.py  user.py
app/repositories/: url.py  user.py
app/schemas/: url.py  user.py
app/services/: auth.py  short_code_generator.py  url.py  util.py
tests/: conftest.py  test_auth.py  test_url_shortning.py
