[tool.poetry]
name = "url-shortner"
version = "0.1.0"
description = "Generates user friendly shortened URL"
authors = ["Shahzaib Ali Khan <shahzaib.ali.k39@gmail.com>"]

readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.119.1"}
uvicorn = {extras = ["standard"], version = "^0.38.0"}
sqlmodel = "^0.0.27"
pyjwt = "^2.10.1"
pydantic-settings = "^2.11.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
aiosqlite = "^0.21.0"
bcrypt = "^5.0.0"
slowapi = "^0.1.9"
structlog = "^25.4.0"
psycopg2 = "^2.9.11"
asyncpg = "^0.30.0"
fastapi-filter = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ruff = "^0.14.1"
isort = "^7.0.0"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"
pytest-cov = "^7.0.0"
mypy = "^1.18.2"
types-python-jose = "^3.5.0.20250531"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
files = "app/**/*.py, tests/**/*.py"
exclude = ['.venv/']
strict = true
